Use Slick in the app